Realized a very simple and basic GUI for the game. Styling will be added next.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="js/script.js"></script>
+    <h1>Rock Paper Scissors game!</h1>
+    <div class="buttons">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    </div>
+    <script src="js/script.js" deter></script>
+    <div id="player-score" class="score"></div>
+    <div id="computer-score" class="score"></div>
+    <div id="result"></div>
+    
 </body>
 </html>
